--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,6 @@
         <module>patterns</module>
         <module>annotations</module>
         <module>annotations-element-value-pair</module>
+        <module>external-sample-project</module>
     </modules>
 </project>
