--- a/example-sample-project/pom.xml
+++ b/example-sample-project/pom.xml
@@ -14,8 +14,12 @@
     <dependencies>
         <dependency>
             <groupId>com.jaway.blog.aspectj</groupId>
-            <artifactId>annotations-element-value-pair</artifactId>
+            <artifactId>annotations-element-value-pair-without-main-class</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -31,7 +35,7 @@
                     <aspectLibraries>
                         <aspectLibrary>
                             <groupId>com.jaway.blog.aspectj</groupId>
-                            <artifactId>annotations-element-value-pair</artifactId>
+                            <artifactId>annotations-element-value-pair-without-main-class</artifactId>
                         </aspectLibrary>
                     </aspectLibraries>
                 </configuration>
@@ -46,32 +50,17 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>com.jayway.blog.YourClass</mainClass>
-                            <classpathPrefix>lib/</classpathPrefix>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.5.1</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
-                        <phase>package</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
                             <outputDirectory>
-                                ${project.build.directory}/lib/
+                                ${project.build.directory}/lib
                             </outputDirectory>
                         </configuration>
                     </execution>
@@ -85,6 +74,20 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.jayway.blog.YourClass</mainClass>
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
